iOS overflow Fix 2

--- a/src/styles/components/_map-modal.scss
+++ b/src/styles/components/_map-modal.scss
@@ -42,8 +42,6 @@
     }
 }
 
-.ReactModal__Body--open {
-    #app {
-        overflow-y: hidden;
-    }
+.ReactModal__Body--open, #app {
+    overflow-y: hidden;
 }
